--- a/style.css
+++ b/style.css
@@ -5,12 +5,16 @@
 
 .container {
   background-color: rgb(100, 56, 67);
+  width: 100%;
+  height: auto;
 }
 
 .header {
   text-align: start;
   padding-top: 10px;
   color: rgb(231, 203, 203);
+  width: 100%;
+  height: 130px;
 }
 
 ul li {
@@ -21,8 +25,78 @@ ul li {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding: 30px;
+  padding: 15px;
   align-items: center;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(231, 203, 203);
+}
+a:hover {
+  color: rgb(231, 203, 203);
+  text-decoration: none;
+}
+
+#aboutBtn {
+  background-color: rgb(100, 56, 67);
+  border: none;
+  font-size: x-large;
+}
+
+#inspirationBtn {
+  background-color: inherit;
+  border: none;
+  font-size: x-large;
+}
+
+#contactBtn {
+  background-color: inherit;
+  border: none;
+  font-size: x-large;
+}
+
+#aboutMeBtn {
+  background-color: inherit;
+  border: none;
+  font-size: x-large;
+}
+
+.content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  color: black;
+  box-shadow: 20px;
+  width: 160px;
+  z-index: 1;
+  font-size: x-large;
+}
+
+.content p {
+  padding: 12px 16px;
+  display: block;
+}
+
+.content a {
+  display: block;
+  color: black;
+  padding: 10px;
+  text-decoration: underline;
+}
+
+.dropdown:hover .content {
+  display: block;
+}
+
+#dp-container1 {
+  width: 500px;
+  height: 140px;
+}
+
+.dropdown-img {
+  width: 40px;
+  height: 40px;
 }
 
 .grid-container {
@@ -82,14 +156,14 @@ ul li {
 
 .auto-click {
   padding: 10px;
-  background: darkgray;
+  background: lightgray;
   color: black;
   font-size: larger;
 }
 
 .reset {
   padding: 10px;
-  background: darkgray;
+  background: lightgray;
   color: crimson;
   font-size: larger;
 }
