--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 .container {
   background-color: rgb(100, 56, 67);
   width: 100%;
+  min-width: 1000px;
   height: auto;
 }
 
@@ -14,7 +15,7 @@
   padding-top: 10px;
   color: rgb(231, 203, 203);
   width: 100%;
-  height: 130px;
+  height: auto;
 }
 
 ul li {
@@ -103,7 +104,7 @@ a:hover {
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(2, 1fr);
-  height: 700px;
+  height: auto;
   width: 100%;
 }
 
